--- a/WebApplication1/OnlinebookingSystem.csproj
+++ b/WebApplication1/OnlinebookingSystem.csproj
@@ -7,7 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="efpt.config.json.user" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.14" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pages\Bookinger\" />
   </ItemGroup>
 
 </Project>
